--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "element-plus": "^2.3.4",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
@@ -26,7 +28,9 @@
     "eslint-plugin-vue": "^9.9.0",
     "husky": "^8.0.3",
     "prettier": "^2.8.4",
-    "vite": "^4.1.4"
+    "vite": "^4.1.4",
+    "vite-plugin-windicss": "^1.8.10",
+    "windicss": "^3.5.6"
   },
   "config": {
     "commitizen": {
